--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = py-spfi-api
-version = attr: py_spfi_api.__version__
+name = spatiafi
+version = attr: spatiafi.__version__
 author = Climate Engine Team
 author_email = admin@climateengine.com
 description = Python library for interacting with the SpatiaFi API
@@ -16,13 +16,8 @@ python_requires = >=3.10
 include_package_data = true
 
 # Add dependencies here
-# List gdal twice! Running pip-compile on linux will only include the first line in the requirements.txt file.
-# But because it is a conditional dependency, (and will be in the compiled reqs.txt) this line in reqs.txt
-# it will be ignored by other operating systems. This lets us pin all dependencies except gdal to the same version.
-
-#install_requires =
-    #gdal ==3.3.2 ; sys_platform == "linux"
-    #gdal ~=3.3.2
+install_requires =
+    authlib
 
 [options.extras_require]
 dev =  # Specify dev dependencies here
@@ -46,7 +41,3 @@ dev =  # Specify dev dependencies here
 
 [options.packages.find]
 where = src
-
-[options.entry_points]
-console_scripts =
-    py-spfi-api = py_spfi_api.main:main
