--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,9 @@ include_package_data = true
 # Add dependencies here
 install_requires =
     authlib
+    click
+    requests
+    httpx
 
 [options.extras_require]
 dev =  # Specify dev dependencies here
@@ -41,3 +44,7 @@ dev =  # Specify dev dependencies here
 
 [options.packages.find]
 where = src
+
+[options.entry_points]
+console_scripts =
+    gdal-auth = spatiafi.gdal_auth:cli
