--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,6 +6,8 @@
 #
 --extra-index-url https://us-python.pkg.dev/ce-builder/python/simple/
 
+anyio==3.7.0
+    # via httpcore
 authlib==1.2.0
     # via spatiafi (setup.cfg)
 autoflake==2.1.1
@@ -23,7 +25,10 @@ cachetools==5.3.1
     #   google-auth
     #   tox
 certifi==2023.5.7
-    # via requests
+    # via
+    #   httpcore
+    #   httpx
+    #   requests
 cffi==1.15.1
     # via cryptography
 cfgv==3.3.1
@@ -36,6 +41,7 @@ click==8.1.3
     # via
     #   black
     #   pip-tools
+    #   spatiafi (setup.cfg)
 colorama==0.4.6
     # via tox
 coverage==7.2.7
@@ -49,7 +55,9 @@ distlib==0.3.6
 docutils==0.20.1
     # via readme-renderer
 exceptiongroup==1.1.1
-    # via pytest
+    # via
+    #   anyio
+    #   pytest
 filelock==3.12.1
     # via
     #   tox
@@ -62,10 +70,19 @@ flake8-pyproject==1.2.3
     # via spatiafi (setup.cfg)
 google-auth==2.19.1
     # via keyrings-google-artifactregistry-auth
+h11==0.14.0
+    # via httpcore
+httpcore==0.17.2
+    # via httpx
+httpx==0.24.1
+    # via spatiafi (setup.cfg)
 identify==2.5.24
     # via pre-commit
 idna==3.4
-    # via requests
+    # via
+    #   anyio
+    #   httpx
+    #   requests
 importlib-metadata==6.6.0
     # via
     #   keyring
@@ -165,6 +182,7 @@ requests==2.31.0
     # via
     #   keyrings-google-artifactregistry-auth
     #   requests-toolbelt
+    #   spatiafi (setup.cfg)
     #   twine
 requests-toolbelt==1.0.0
     # via twine
@@ -182,6 +200,11 @@ six==1.16.0
     # via
     #   bleach
     #   google-auth
+sniffio==1.3.0
+    # via
+    #   anyio
+    #   httpcore
+    #   httpx
 tomli==2.0.1
     # via
     #   autoflake
