--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,44 @@
 #
 --extra-index-url https://us-python.pkg.dev/ce-builder/python/simple/
 
+anyio==3.7.0
+    # via httpcore
 authlib==1.2.0
     # via spatiafi (setup.cfg)
+certifi==2023.5.7
+    # via
+    #   httpcore
+    #   httpx
+    #   requests
 cffi==1.15.1
     # via cryptography
+charset-normalizer==3.1.0
+    # via requests
+click==8.1.3
+    # via spatiafi (setup.cfg)
 cryptography==41.0.1
     # via authlib
+exceptiongroup==1.1.1
+    # via anyio
+h11==0.14.0
+    # via httpcore
+httpcore==0.17.2
+    # via httpx
+httpx==0.24.1
+    # via spatiafi (setup.cfg)
+idna==3.4
+    # via
+    #   anyio
+    #   httpx
+    #   requests
 pycparser==2.21
     # via cffi
+requests==2.31.0
+    # via spatiafi (setup.cfg)
+sniffio==1.3.0
+    # via
+    #   anyio
+    #   httpcore
+    #   httpx
+urllib3==2.0.3
+    # via requests
