--- a/setup.cfg
+++ b/setup.cfg
@@ -19,8 +19,9 @@ include_package_data = true
 install_requires =
     authlib
     click
-    requests
     httpx
+    platformdirs
+    requests
 
 [options.extras_require]
 dev =  # Specify dev dependencies here
