--- a/setup.cfg
+++ b/setup.cfg
@@ -19,12 +19,13 @@ include_package_data = true
 install_requires =
     authlib
     click
+    google-auth
     httpx
     platformdirs
     requests
 
 [options.extras_require]
-dev =  # Specify dev dependencies here
+dev =
     autoflake
     black
     build
