--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,12 @@
 #
 #    scripts/gen_requirements.sh
 #
---extra-index-url https://us-python.pkg.dev/ce-builder/python/simple/
-
 anyio==3.7.0
     # via httpcore
 authlib==1.2.0
     # via spatiafi (setup.cfg)
+cachetools==5.3.1
+    # via google-auth
 certifi==2023.5.7
     # via
     #   httpcore
@@ -25,6 +25,8 @@ cryptography==41.0.1
     # via authlib
 exceptiongroup==1.1.1
     # via anyio
+google-auth==2.17.3
+    # via spatiafi (setup.cfg)
 h11==0.14.0
     # via httpcore
 httpcore==0.17.2
@@ -36,10 +38,22 @@ idna==3.4
     #   anyio
     #   httpx
     #   requests
+platformdirs==3.9.1
+    # via spatiafi (setup.cfg)
+pyasn1==0.5.0
+    # via
+    #   pyasn1-modules
+    #   rsa
+pyasn1-modules==0.3.0
+    # via google-auth
 pycparser==2.21
     # via cffi
 requests==2.31.0
     # via spatiafi (setup.cfg)
+rsa==4.9
+    # via google-auth
+six==1.16.0
+    # via google-auth
 sniffio==1.3.0
     # via
     #   anyio
