--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -44,8 +44,8 @@ repos:
     rev: 23.3.0
     hooks:
       - id: black
-  - repo: https://github.com/lyz-code/yamlfix/
-    rev: 1.9.0
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v3.0.0 # See: https://github.com/pre-commit/mirrors-prettier/tags
     hooks:
-      - id: yamlfix
-        exclude: .circleci/config.yml
+      - id: prettier
+        types: [yaml]
