--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -68,8 +68,11 @@ flake8-pyproject==1.2.3
     # via spatiafi (setup.cfg)
 google-auth==2.19.1
     # via
+    #   google-auth-oauthlib
     #   keyrings-google-artifactregistry-auth
     #   spatiafi (setup.cfg)
+google-auth-oauthlib==1.0.0
+    # via spatiafi (setup.cfg)
 h11==0.14.0
     # via httpcore
 httpcore==0.17.2
@@ -120,6 +123,8 @@ mypy-extensions==1.0.0
     #   mypy
 nodeenv==1.8.0
     # via pre-commit
+oauthlib==3.2.2
+    # via requests-oauthlib
 packaging==23.1
     # via
     #   black
@@ -182,9 +187,12 @@ readme-renderer==37.3
 requests==2.31.0
     # via
     #   keyrings-google-artifactregistry-auth
+    #   requests-oauthlib
     #   requests-toolbelt
     #   spatiafi (setup.cfg)
     #   twine
+requests-oauthlib==1.3.1
+    # via google-auth-oauthlib
 requests-toolbelt==1.0.0
     # via twine
 rfc3986==2.0.0
