--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,10 @@ cryptography==41.0.1
 exceptiongroup==1.1.1
     # via anyio
 google-auth==2.17.3
+    # via
+    #   google-auth-oauthlib
+    #   spatiafi (setup.cfg)
+google-auth-oauthlib==1.0.0
     # via spatiafi (setup.cfg)
 h11==0.14.0
     # via httpcore
@@ -38,6 +42,8 @@ idna==3.4
     #   anyio
     #   httpx
     #   requests
+oauthlib==3.2.2
+    # via requests-oauthlib
 platformdirs==3.9.1
     # via spatiafi (setup.cfg)
 pyasn1==0.5.0
@@ -49,7 +55,11 @@ pyasn1-modules==0.3.0
 pycparser==2.21
     # via cffi
 requests==2.31.0
-    # via spatiafi (setup.cfg)
+    # via
+    #   requests-oauthlib
+    #   spatiafi (setup.cfg)
+requests-oauthlib==1.3.1
+    # via google-auth-oauthlib
 rsa==4.9
     # via google-auth
 six==1.16.0
