--- a/requirements.txt
+++ b/requirements.txt
@@ -25,12 +25,17 @@ cryptography==41.0.1
     # via authlib
 exceptiongroup==1.1.1
     # via anyio
+google-api-core==2.11.1
+    # via spatiafi (setup.cfg)
 google-auth==2.17.3
     # via
+    #   google-api-core
     #   google-auth-oauthlib
     #   spatiafi (setup.cfg)
 google-auth-oauthlib==1.0.0
     # via spatiafi (setup.cfg)
+googleapis-common-protos==1.60.0
+    # via google-api-core
 h11==0.14.0
     # via httpcore
 httpcore==0.17.2
@@ -46,6 +51,10 @@ oauthlib==3.2.2
     # via requests-oauthlib
 platformdirs==3.9.1
     # via spatiafi (setup.cfg)
+protobuf==4.24.2
+    # via
+    #   google-api-core
+    #   googleapis-common-protos
 pyasn1==0.5.0
     # via
     #   pyasn1-modules
@@ -56,6 +65,7 @@ pycparser==2.21
     # via cffi
 requests==2.31.0
     # via
+    #   google-api-core
     #   requests-oauthlib
     #   spatiafi (setup.cfg)
 requests-oauthlib==1.3.1
