better retries less errors!

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,12 +19,12 @@ include_package_data = true
 install_requires =
     authlib
     click
+    google-api-core
     google-auth
     google-auth-oauthlib
     httpx
     platformdirs
     requests
-    google-api-core
 
 [options.extras_require]
 dev =
@@ -37,6 +37,7 @@ dev =
     keyring
     keyrings.google-artifactregistry-auth
     mypy
+    pandas
     pip-tools
     pre-commit
     pytest
