--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -128,6 +128,8 @@ mypy-extensions==1.0.0
     #   mypy
 nodeenv==1.8.0
     # via pre-commit
+numpy==1.25.2
+    # via pandas
 oauthlib==3.2.2
     # via requests-oauthlib
 packaging==23.1
@@ -138,6 +140,8 @@ packaging==23.1
     #   pytest
     #   setuptools-scm
     #   tox
+pandas==2.1.0
+    # via spatiafi (setup.cfg)
 pathspec==0.11.1
     # via black
 pip-tools==6.13.0
@@ -189,6 +193,10 @@ pytest==7.3.2
     #   spatiafi (setup.cfg)
 pytest-cov==4.1.0
     # via spatiafi (setup.cfg)
+python-dateutil==2.8.2
+    # via pandas
+pytz==2023.3.post1
+    # via pandas
 pyyaml==6.0
     # via pre-commit
 readme-renderer==37.3
@@ -219,6 +227,7 @@ six==1.16.0
     # via
     #   bleach
     #   google-auth
+    #   python-dateutil
 sniffio==1.3.0
     # via
     #   anyio
@@ -245,6 +254,8 @@ typing-extensions==4.6.3
     # via
     #   mypy
     #   setuptools-scm
+tzdata==2023.3
+    # via pandas
 urllib3==1.26.16
     # via
     #   google-auth
