--- a/requirements.txt
+++ b/requirements.txt
@@ -47,8 +47,12 @@ idna==3.4
     #   anyio
     #   httpx
     #   requests
+numpy==1.25.2
+    # via pandas
 oauthlib==3.2.2
     # via requests-oauthlib
+pandas==2.1.0
+    # via spatiafi (setup.cfg)
 platformdirs==3.9.1
     # via spatiafi (setup.cfg)
 protobuf==4.24.2
@@ -63,6 +67,10 @@ pyasn1-modules==0.3.0
     # via google-auth
 pycparser==2.21
     # via cffi
+python-dateutil==2.8.2
+    # via pandas
+pytz==2023.3.post1
+    # via pandas
 requests==2.31.0
     # via
     #   google-api-core
@@ -73,11 +81,15 @@ requests-oauthlib==1.3.1
 rsa==4.9
     # via google-auth
 six==1.16.0
-    # via google-auth
+    # via
+    #   google-auth
+    #   python-dateutil
 sniffio==1.3.0
     # via
     #   anyio
     #   httpcore
     #   httpx
+tzdata==2023.3
+    # via pandas
 urllib3==2.0.3
     # via requests
