--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -42,12 +42,8 @@ click==8.1.3
     #   spatiafi (setup.cfg)
 colorama==0.4.6
     # via tox
-coverage==7.2.7
-    # via pytest-cov
 cryptography==41.0.1
-    # via
-    #   authlib
-    #   secretstorage
+    # via authlib
 distlib==0.3.6
     # via virtualenv
 docutils==0.20.1
@@ -101,10 +97,6 @@ isort==5.12.0
     # via spatiafi (setup.cfg)
 jaraco-classes==3.2.3
     # via keyring
-jeepney==0.8.0
-    # via
-    #   keyring
-    #   secretstorage
 keyring==23.13.1
     # via
     #   keyrings-google-artifactregistry-auth
@@ -188,10 +180,6 @@ pyproject-api==1.5.1
 pyproject-hooks==1.0.0
     # via build
 pytest==7.3.2
-    # via
-    #   pytest-cov
-    #   spatiafi (setup.cfg)
-pytest-cov==4.1.0
     # via spatiafi (setup.cfg)
 python-dateutil==2.8.2
     # via pandas
@@ -219,8 +207,6 @@ rich==13.4.2
     # via twine
 rsa==4.9
     # via google-auth
-secretstorage==3.3.3
-    # via keyring
 setuptools-scm==7.1.0
     # via spatiafi (setup.cfg)
 six==1.16.0
@@ -238,7 +224,6 @@ tomli==2.0.1
     #   autoflake
     #   black
     #   build
-    #   coverage
     #   flake8-pyproject
     #   mypy
     #   pyproject-api
