rename to gdal_auth b/c gdal uses underscore; more README

--- a/setup.cfg
+++ b/setup.cfg
@@ -53,3 +53,4 @@ where = src
 [options.entry_points]
 console_scripts =
     gdal-auth = spatiafi.gdal_auth:cli
+    gdal_auth = spatiafi.gdal_auth:cli
