ensure version of platformdirs supports ensure_exists

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,7 @@ install_requires =
     google-auth-oauthlib
     httpx
     pandas
-    platformdirs
+    platformdirs >= 3.2.0
     requests
 
 [options.extras_require]
